Review complete. Everything is green: compile clean, doclint clean, 3484 tests / 0 failures / 0 errors.
The one real bug

annotation/SqlScript.java — two javadoc samples were uncompilable
against the current dependency:

PSC.selectFrom(User.class).where(Filters.gt("id")).sql();          //
before
Dsl.PSC.selectFrom(User.class).where(Filters.gt("id")).build().query();
// after

.sql() no longer exists in abacus-query 4.8.9 — the builder terminal is
.build() (returns record SP) then .query(). The 2026‑07‑22 pass fixed
the 12 DataTransferUtil sites but missed these. I verified against the
actual jar with javap/zip inspection, and also confirmed Dsl.PSC,
Filters.gt, Dataset.toCsv(Writer), IntFunctions.ofLinkedHashMap,
Suppliers.ofSetMultimap all still exist.

Worth flagging: PSC is not a removed class — it's a static final Dsl
constant on Dsl. A future pass shouldn't "fix" it away.

Javadoc defects fixed (9 sites, comment-only)

- MergedById.java ×2 — lines inside <pre>{@code} carried a 5-space     *
prefix instead of *, a botched splice from an earlier edit.
- Jdbc.java ×1 — a line inside a javadoc block with no leading *.
- DBLock.java ×6 — every try (DBLock ...) sample rendered its body at
the same indent as the try.

Systematic verification

Rather than only reading prose, I ran an API-staleness sweep: extract
every framework symbol referenced from comment lines, diff against
symbols that appear in real code, then confirm survivors with javap
against the m2 jars. The only three stale JdbcUtil names
(doesTableExist, getColumnLabelList, getColumnNameList) live exclusively
inside the archived, fully commented-out SqlExecutor.java, whose own
javadoc declares it "no longer compilable" — not defects.

I also cross-checked behavioral javadoc claims against the
implementation: the @Handler/@Handlers onion ordering, reverse
afterInvoke, skip-when-beforeInvoke-didn't-run, result == null on
exception, and externalCallsOnly all match DaoImpl; AbstractQuery obeys
the settled clo